--- a/index.html
+++ b/index.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/assignment.css">
 </head>
-<body>
-    <header>
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h2 class="nav-title">LOGO</h2>
+            <button class="btn-primary open-sans-rale">Sign Up</button>
+        </nav>
+        <div class="banner">
+            <h3 class="open-sans-rale">Cool Dark UI Template for <br> Webflow Agencies!</h3>
+            <button class="btn-primary open-sans-rale">Stay Focused</button>
+        </div>
 
     </header>
     <main>
+        <section class="Action">
+            <div>
+            <h2 class="section-title">See It in Action</h2>
+           <p class="section-description">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+           <button class="btn-primary">Launch Live Preview</button>
+           </div>
+           <div>
+           <img src="Assets/wc-mini.png" alt="">
+           </div>
+
+        </section>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
