--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/assignment.css">
 </head>
-<body class="open-sans-normal">
+<body class="inter-normal">
     <header class="header">
         <nav>
             <h2 class="nav-title">LOGO</h2>
-            <button class="btn-primary open-sans-rale">Sign Up</button>
+            <button class="btn-primary raleway-normal">Sign Up</button>
         </nav>
         <div class="banner">
-            <h3 class="open-sans-rale">Cool Dark UI Template for <br> Webflow Agencies!</h3>
-            <button class="btn-primary open-sans-rale">Stay Focused</button>
+            <h3 class="raleway-normal">Cool Dark UI Template for <br> Webflow Agencies!</h3>
+            <button class="btn-primary raleway-normal">Stay Focused</button>
         </div>
 
     </header>
@@ -29,10 +29,11 @@
             <div>
             <h2 class="section-title">See It in Action</h2>
            <p class="section-description">Explore the live preview and imagine your <br> brand in this bold new look.</p>
-           <button class="btn-primary">Launch Live Preview</button>
+           <button class="btn-primary raleway-normal">Launch Live Preview</button>
            </div>
            <div>
-           <img src="Assets/wc-mini.png" alt="">
+           <!-- <img src="Assets/wc-mini.png" alt="" class="img-format">-->
+            <img src="Assets/wc-mini.png" alt="" class="img-format">
            </div>
 
         </section>
