added productive users

--- a/index.html
+++ b/index.html
@@ -28,13 +28,31 @@
         <section class="Action">
             <div>
             <h2 class="section-title">See It in Action</h2>
-           <p class="section-description">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+           <p class="section-description raleway-normal">Explore the live preview and imagine your <br> brand in this bold new look.</p>
            <button class="btn-primary raleway-normal">Launch Live Preview</button>
            </div>
            <div>
            <!-- <img src="Assets/wc-mini.png" alt="" class="img-format">-->
             <img src="Assets/wc-mini.png" alt="" class="img-format">
            </div>
+
+        </section>
+        <section class="users-section">
+            <h2 class="heading">Joined Thousands of Productive Users</h2>
+            <div class="Productive">
+            <div class="users">
+                <h4 class="type">50K</h4>
+                <p class="description inter-normal">Active Users</p>
+            </div>
+             <div class="users">
+                <h4 class="type">2M+</h4>
+                <p class="description inter-normal">Focus Sessions</p>
+            </div>
+             <div class="users">
+                <h4 class="type">95%</h4>
+                <p class="description inter-normal">Satisfaction Rate</p>
+            </div>
+            </div>
 
         </section>
 
