--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/assignment.css">
 </head>
-<body class="inter-normal">
+<body class="inter-normal secondary-bg">
     <header class="header">
         <nav>
             <h2 class="nav-title">LOGO</h2>
@@ -53,8 +53,25 @@
                 <p class="description inter-normal">Satisfaction Rate</p>
             </div>
             </div>
-
+           
         </section>
+         <section class="section">
+                <div>
+                    <div class="section-column">
+                        <h2 class="touch raleway-normal">Let’s Get in Touch</h2>
+                    </div>
+                    
+                </div>
+                <div class="section-column">
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="example@email.com">
+                        <input type="text" name="" id="" placeholder="full name">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="write your message"></textarea>
+                        <input class="btn-primary" type="submit" value="Get in Touch">
+                    </form>
+                </div>
+            </section>
+
 
     </main>
     <footer>
