--- a/index.html
+++ b/index.html
@@ -74,8 +74,16 @@
 
 
     </main>
-    <footer>
-
+    <footer class="last">
+        <h2 class="head inter-normal">LOGO</h2>
+        <p class="ready">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        <div class="title">
+            <div class="description">Home</div>
+            <div class="description">About</div>
+            <div class="description">How It Works</div>
+            <div class="description">Service</div>
+        </div>
+        
     </footer>
 </body>
 </html>
